resolve ellipse not showing bug

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -111,6 +111,7 @@ html {
     position: absolute;
     width: 100%;
     height: 700px;
+    display: block;
     top: 80%;
     filter: blur(15rem);
     background: radial-gradient(
